5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1807_2567.log
== TEST (2019-06-08 13:18:43) 
-- CODE:
a=input("string: ")
for i in a:
	print(a)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:19:41) 
-- CODE:
a=input("string: ")
for i in a:
	print("ola"*a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("ola"*a)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:25:26) 
-- CODE:
a=input("string: ")
for i in range(size(a)):
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(size(a)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:26:05) 
-- CODE:
a=int(input("digite: "))
for i in range(size(a)):
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(size(a)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:26:30) 
-- CODE:
a=int(input("digite: "))
for i in range(len(a)):
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(len(a)):
TypeError: object of type 'int' has no len()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:24:50) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+i):
		print("*",end="")
	print("\n",end="")	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
****
*******
***********
****************
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:25:32) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+i):
		print("*",end="")
	print("\n",end="")	
	
-- EXECUTION TIME:
0.80406
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
****
*******
***********
****************
**********************
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
****
*******
***********
****************
**********************
*****************************
*************************************
**********************************************
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
****
*******
***********
****************
**********************
*****************************
*************************************
**********************************************
********************************************************
*******************************************************************
*******************************************************************************
********************************************************************************************
**********************************************************************************************************
***********************************************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:25:52) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+i):
		print("*",end="")
	print("\n",end="")	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
****
*******
***********
****************
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:26:33) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+1):
		print("*",end="")
	print("\n",end="")	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 14:26:45) 
-- CODE:
a=int(input("digite: "))
for j in range(a):
	for i in range(a-j):		
		print("*",end="")
	print("\n",end="")
for j in range(a):
	for i in range(j+1):
		print("*",end="")
	print("\n",end="")	
	
-- EXECUTION TIME:
0.791281
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 20:56:59) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
	print(i)
for i in range(a):
	c=b*(a-(a-i))
	print(c)
	print(i)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 20:57:43) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a):
	c=b*(a-(a-i))
	print(c)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 20:57:56) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a):
	c=b*(a-(a-i))
	print(c)
	
	
	
	
-- EXECUTION TIME:
1.01784
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 20:58:18) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a+1):
	c=b*(a-(a-i))
	print(c)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 20:58:29) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a+1):
	c=b*(a-(a-i))
	print(c)
	
	
	
	
-- EXECUTION TIME:
1.2203
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:55:59) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a)	:
	c=b*(a-(a+i))
	print(c)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:56:25) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a)	:
	c=b*(a-(a+1))
	print(c)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:57:03) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a)	:
	c=b*(a-(a-i))
	print(c)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:57:24) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a)	:
	c=b*(a-(a-i))
	print(c)
	
	
	
	
-- EXECUTION TIME:
0.862725
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:57:48) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a):
	c=b*(a-(a-i))
	print(c)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:58:07) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a):
	c=b*(a-(a+i))
	print(c)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:59:14) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a):
	c=(b*(a-(a-i)))
	print(c)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:00:58) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a+1):
	c=b*(a-(a-i))	
	print(c)
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:01:11) 
-- CODE:
from numpy import*
a=int(input("numero: "))
b="*"
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a+1):
	c=b*(a-(a-i))	
	print(c)
	
	
	
	
-- EXECUTION TIME:
1.23157
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
